Finalize initial bracket generation